# rhobear-capturd

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-msix.yml  deploy-web.yml
capturd/: cli.py  pro.py
capturd/shots/: capture.py  cli.py
capturd/walk/: ai_pipeline.py  coordinator.py  tts_vertex.py
director-rig/: README.md  film.py  finish.py  paid_boot.py  scout.py  verify_frames.py
director-rig/tests/: test_finish.py
packaging/: README.md  pyinstaller.spec
packaging/msix/: AppxManifest.xml
service/app/: _http.py  auth.py  billing.py  config.py  main.py
service/deploy/: capturd-service.service
service/web/: index.html  m.html  manifest.webmanifest  sw.js
sunsponge_capture/: __init__.py  cli.py
tests/: test_capture.py  test_pro_env_config.py  test_tts_vertex.py
web/: dashboard.html  index.html
